# markitdown-fastapi

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/branch-creation/: SKILL.md
.claude/skills/fastapi-conventions/: SKILL.md
.claude/skills/issue-creation/: SKILL.md
.claude/skills/issue-creation/resources/: issue-template.md
.claude/skills/pull-request-creation/: SKILL.md
.claude/skills/python-conventions/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  test.yml
src/markitdown_api/: main.py
src/markitdown_api/api/v1/: router.py
src/markitdown_api/api/v1/endpoints/: batch.py  convert.py  health.py
src/markitdown_api/core/: config.py  logging.py  markitdown_client.py  security.py  url_guard.py
src/markitdown_api/schemas/: convert.py
src/markitdown_api/services/: conversion.py
tests/: conftest.py  test_conversion_fallback.py  test_convert.py  test_logging.py  test_markitdown_client.py  test_security.py
tests/fixtures/: sample.html
